# amazon-kinesis-producer

./: .gitignore  .travis.yml  CHANGELOG.md  CMakeCache.txt  CMakeLists.txt  CMakeSettings.json  CONTRIBUTING.md  Jamroot.jam  Makefile  README.md  THIRD_PARTY_NOTICES  aggregation-format.md  boost-build.jam  bootstrap.sh  buildspec-aarch64.yml  buildspec-x86_64.yml  cmake_install.cmake  metrics.md  pack.py  pom.xml
.github/: dependabot.yml
.github/workflows/: build-and-test.yml  maven.yml
aws/: mutex.h
aws/auth/: certs.h  credentials.cc  credentials.h  mutable_static_creds_provider.cc  mutable_static_creds_provider.h  sigv4.cc  sigv4.h
aws/auth/test/: credentials_test.cc  mutable_static_creds_provider_test.cc  sigv4_test.cc
aws/auth/test/aws4_testsuite/: get-header-value-multiline.req
aws/http/: ec2_metadata.cc  ec2_metadata.h  http.cc  http.h  http_client.cc  http_client.h  http_message.cc  http_message.h  http_request.cc  http_request.h  http_response.cc  http_response.h  http_result.h  io_service_socket.h  socket.h
aws/http/test/: ec2_metadata_test.cc  http_client_test.cc
aws/kinesis/: main.cc  test_driver.cc
aws/kinesis/core/: FlushStats.cc  FlushStats.h  aggregator.h  attempt.h  collector.h  configuration.h  ipc_manager.cc  ipc_manager.h  kinesis_producer.cc  kinesis_producer.h  kinesis_record.cc  kinesis_record.h  limiter.h  pipeline.h  put_records_context.h  put_records_request.h  reducer.h  retrier.cc  retrier.h  serializable_container.h  shard_map.cc  shard_map.h  stream_id_resolver.cc  stream_id_resolver.h  time_sensitive.h  user_record.cc  user_record.h
aws/kinesis/core/test/: aggregator_test.cc  ipc_manager_test.cc  kinesis_record_test.cc  limiter_test.cc  put_records_request_test.cc  reducer_test.cc  retrier_test.cc  shard_map_test.cc  stream_id_cache_test.cc  stream_id_resolver_test.cc  test_utils.cc  test_utils.h  user_record_test.cc
aws/kinesis/platform/: nix.cc  platform.h  win32.cc
aws/kinesis/protobuf/: config.pb.cc  config.pb.h  config.proto  messages.pb.cc  messages.pb.h  messages.proto
aws/kinesis/test/: test.cc  test_tls_server.cc  test_tls_server.h
aws/metrics/: accumulator.h  metric.h  metrics_constants.cc  metrics_constants.h  metrics_finder.h  metrics_header.h  metrics_index.cc  metrics_index.h  metrics_manager.cc  metrics_manager.h
aws/metrics/test/: accumulator_test.cc  metric_test.cc  metrics_manager_test.cc
aws/utils/: concurrent_hash_map.h  concurrent_linked_queue.h  error_translater.cc  error_translater.h  executor.h  interlock.cc  interlock.h  io_service_executor.h  json.h  logging.cc  logging.h  md5_hasher.cc  md5_hasher.h  openssl_md5_hashser.cc  processing_statistics_logger.cc  processing_statistics_logger.h  segfault_signal.cc  segfault_signal.h  signal_handler.cc  signal_handler.h  spin_lock.cc  spin_lock.h  time_sensitive.h  time_sensitive_queue.h  timed_death.cc  timed_death.h  token_bucket.h  utils.cc  utils.h  wincrypt_md5_hasher.cc  wrap_memcpy.c  writer_methods.cc  writer_methods.h
aws/utils/backtrace/: backtrace.h  bsd_backtrace.cc  gcc_backtrace.cc  null_backtrace.cc
aws/utils/test/: concurrent_hash_map_test.cc  concurrent_linked_queue_test.cc  json_test.cc  spin_lock_test.cc  token_bucket_test.cc
base64/lib/: config.h
cmake/: macos.cmake  nix-common.cmake  third-party.cmake  win32.cmake
java/amazon-kinesis-producer/: .gitignore  pom.xml
java/amazon-kinesis-producer-sample/: .gitignore  README.md  default_config.properties  pom.xml
java/amazon-kinesis-producer-sample/src/com/amazonaws/kinesis/producer/sample/: MetricsAwareSampleProducer.java  SampleConsumer.java  SampleProducer.java  Utils.java
java/amazon-kinesis-producer-sample/src/com/amazonaws/services/kinesis/producer/sample/: MetricsAwareSampleProducer.java  SampleConsumer.java  SampleProducer.java  SampleProducerConfig.java  Utils.java
java/amazon-kinesis-producer-sample/src/software/amazon/kinesis/producer/sample/: MetricsAwareSampleProducer.java  SampleConsumer.java  SampleProducer.java  SampleProducerConfig.java  Utils.java
java/amazon-kinesis-producer/src/main/java-templates/: KinesisProducerLibraryPackage.java
java/amazon-kinesis-producer/src/main/java/com/amazonaws/kinesis/producer/: Attempt.java  Configuration.java  Daemon.java  DaemonException.java  IrrecoverableError.java  KinesisProducer.java  Metric.java  UserRecordFailedException.java  UserRecordResult.java
java/amazon-kinesis-producer/src/main/java/com/amazonaws/kinesis/producer/protobuf/: Config.java  Messages.java
java/amazon-kinesis-producer/src/main/java/com/amazonaws/services/kinesis/producer/: Attempt.java  BinaryToHexConverter.java  CertificateExtractor.java  Daemon.java  DaemonException.java  FileAgeManager.java  FutureTimedOutException.java  GlueSchemaRegistrySerializerInstance.java  HashedFileCopier.java  IKinesisProducer.java  IrrecoverableError.java  KinesisProducer.java  KinesisProducerConfiguration.java  (+9 more)
java/amazon-kinesis-producer/src/main/java/software/amazon/kinesis/producer/: Attempt.java  BinaryToHexConverter.java  CertificateExtractor.java  Daemon.java  DaemonException.java  FileAgeManager.java  FutureTimedOutException.java  GlueSchemaRegistrySerializerInstance.java  HashedFileCopier.java  IKinesisProducer.java  IrrecoverableError.java  KinesisProducer.java  KinesisProducerConfiguration.java  KinesisProducerException.java  LogInputStreamReader.java  Metric.java  ProcessFailureBehavior.java  UnexpectedMessageException.java  UserRecord.java  UserRecordFailedException.java  UserRecordResult.java
java/amazon-kinesis-producer/src/main/resources/cacerts/: b204d74a.0
java/amazon-kinesis-producer/src/test/java/: log4j.properties
java/amazon-kinesis-producer/src/test/java/software/amazon/kinesis/producer/: BinaryToHexConverterTest.java  CertificateExtractorTest.java  FileAgeManagerTest.java  GlueSchemaRegistrySerializerInstanceTest.java  HashedFileCopierTest.java  KinesisProducerConfigurationTest.java  KinesisProducerTest.java
java/amazon-kinesis-producer/src/test/resources/: logback-test.xml  logback.xml  stream1.txt  stream1Truncated.txt
(+11 files in other folders)
